k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: xpense-backend
  namespace: xpense
spec:
  replicas: 2
  selector:
    matchLabels:
      app: xpense-backend
  template:
    metadata:
      labels:
        app: xpense-backend
    spec:
      containers:
        - name: backend
          image: YOUR_AWS_ACCOUNT_ID.dkr.ecr.ap-south-1.amazonaws.com/xpense-backend:latest
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 30
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
