k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: xpense-frontend
  namespace: xpense
spec:
  replicas: 2
  selector:
    matchLabels:
      app: xpense-frontend
  template:
    metadata:
      labels:
        app: xpense-frontend
    spec:
      containers:
        - name: frontend
          image: YOUR_AWS_ACCOUNT_ID.dkr.ecr.ap-south-1.amazonaws.com/xpense-frontend:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "200m"
              memory: "128Mi"
